kube/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rickroller
spec:
  containers:
    - name: rickroller
      image: derlin/rickroller
      ports:
        - containerPort: 8080
