kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rickroller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: /rickroller
spec:
  rules:
    - http:
        paths:
          - path: /rickroller(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: rickroller
                port:
                  number: 80
